Closed Bug 582897 Opened 15 years ago Closed 15 years ago

JM: "Assertion failure: regstate[reg].fe,"

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: gkw, Unassigned)

References

Details

(Keywords: assertion, regression, testcase)

let(x) { x + x-- } asserts js debug shell on JM changeset 3700c42a8e82 with -m at Assertion failure: regstate[reg].fe, at ../methodjit/FrameState-inl.h:616
A testcase for this bug was automatically identified at js/src/jit-test/tests/jaeger/bug582897.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.