[JAEGER] Fixed assumption about copies which is broken by let expressions (bug 582897).